--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/website2.ico">
+  <meta name="description" content="Brian Lee Resume Website">
+  <meta name="author" content="861215455">
 
-  <title>John Doe - Business Administration</title>
+  <title>Brian Lee - Psychology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Brian Lee</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/brianlee.jpeg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Brian Lee
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
-
-        Enter bio here<br><br>
-
-        Enter bio here
+        <div class="subheading mb-5">Sociology📚</div>
+        <p class="lead mb-4">In the beginning of my high school career, my father’s business went bankrupt, due to the subprime mortgage industry crash, and had to move to Korea for 3 years. I woke up countless nights to the sound of my weeping mother hopelessly staring at piles of bills. She was a lifelong housewife with no work experience who struggled to take care of her four kids, absolutely terrified for the future.
+As the eldest son, I felt a filial duty to take care of my family while my father was gone, and by my junior year I was working two jobs, over 40 hours a week. I put my family’s financial stability as my main priority and regretfully was unable to focus on my studies. While all three of my siblings enjoyed college acceptance letters after high school, I was walking into another closing shift at one of my many jobs. After graduating high school, I applied to community college not knowing why I was. My family still relied on me financially, so I was working 2-3 jobs while attending classes.
+In 2017, my father was finally able to restart his business, allowing me to work less and focus on being a student again. I focused on school and immediately saw encouraging improvements in my grades. 
+Although my educational career took a late start, I have no regrets. Although my family’s financial hardship was an educational barrier, the lessons I learned and work ethic I developed have become significant tools that have helped me stay focused on my educational goals. In retrospect, I believe I knew I was destined to do more than just serve tables and work entry level jobs. Moving forward, I am confident that no matter the adversities I may face, I am strong enough to overcome any challenge.
+<br><br>
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/brian-lee-769839217/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/brianjunglee">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
+          <a target="_blank" id="socialicon-3" href="https://www.instagram.com/brianjunglee/?hl=en">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:brianjunglee1129@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Cashier, Barista</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.cgvcinemas.com/">CGV Cinemas</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Served coffee<br> 
+              • Trained new employees<br>
+              • Opened and closed daily registers<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2014 - 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Special Assets Department Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.bankofhope.com/">Bank of Hope</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Answering calls and writing emails<br>
+              • Created new loan files<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">January 2016 - January 2017</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Broker's Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.newstarrealty.com/">New Star Realty & Investment</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • File management<br>
+            • Collected rent from Broker's tenants<br>
+            • Admin work for the New Star Real Estate School<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2021 - June 2021</span>
           </div>
         </div>
 
@@ -151,34 +150,33 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Fairfax High School</h3>
+            <div class="subheading mb-3">High School Diploma</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2011 - June 2015</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+          <div class="resume-content">
+            <h3 class="mb-0">Santa Monica College</h3>
+            <div class="subheading mb-3">AA Degree in Sociology</div>
+            <div>Sociology</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2015 - In Progress</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">BA in Psychology</div>
+            <div>Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2021 - In Progress</span>
           </div>
         </div>
 
@@ -191,7 +189,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Portfolio1.jpeg" width="500px">
+            <img src="img/Portfolio2.jpeg" width="500px"><br>
+            <img src="img/Portfolio3.jpeg" width="500px">
+            <img src="img/Portfolio4.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
